fixed the nav bar showing behind page on mobile

--- a/client/src/components/Header.css
+++ b/client/src/components/Header.css
@@ -64,6 +64,7 @@ header nav a {
 
     header nav.nav-open {
         display: flex;
+        z-index: 1000;
     }
 
     header nav a {
